assets/sass/pages/_project.scss
main.project-main {
  @extend .row;

  .content {
    @extend .row;
    margin-top: 2rem;
  }

  .description {
    @extend .columns;
    @extend .large-4;
  }

  .gallery {
    @extend .columns;
    @extend .large-8;
  }

  .thumbs-list {
    @extend .row;
    @extend .small-up-1;
    @extend .medium-up-2;
    @extend .large-up-2;

  }
  
  .thumbs-item {
    @extend .column;
    @extend .column-block;

    img {
      opacity: 1;
      transition: .3s;
      overflow: hidden;
      @include on-event {
        opacity: .5;
        transform: scale(.95);
      }
    }
  }

}

